--- a/public/index.html
+++ b/public/index.html
@@ -7,17 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Regza Bootstrap 5 Landing Page Template"
+      content="Audacia Business School Martinique, a joint commitment to success!"
     />
-    <meta
-      name="keywords"
-      content="bootstrap 5, premium, marketing,
-      multipurpose"
-    />
+    <meta name="keywords" content="Audacia business School Martinique" />
     <meta content="Pichforest" name="author" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Site Internet de Audacia Business School"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logoHome.png" />
     <!--
