ajout des dernières modifs

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Audacia Business School Martinique, a joint commitment to success!"
+      content="Audacia Business School contribue activement au développement d’un écosystème européen de l’éducation et de l’innovation en proposant des programmes, recherches et initiatives qui favorisent l’entrepreneuriat, la durabilité, la transformation digitale et l’inclusion sociale.
+      Audacia Business School agit comme un catalyseur de projets collaboratifs, en connectant les acteurs académiques, institutionnels et économiques à travers l’Europe, dans le but de former une nouvelle génération de leaders agiles, responsables et européens."
     />
     <meta name="keywords" content="Audacia business School Martinique" />
     <meta content="Pichforest" name="author" />
